used java 8 for genai-client, ghostwriter and gw-maven-plugin modules.