@@ -4,6 +4,7 @@ import static org.junit.jupiter.api.Assertions.assertNull;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 
 import org.junit.jupiter.api.Test;
@@ -21,7 +22,8 @@ class TypeScriptReviewerTest {
     void perform_returnsNull_whenNoGuidance() throws IOException {
         TypeScriptReviewer reviewer = new TypeScriptReviewer();
         File tsFile = new File(tempDir, "file.ts");
-        Files.writeString(tsFile.toPath(), "export const x = 1;");
+        // Java 8 compatible file writing
+        Files.write(tsFile.toPath(), "export const x = 1;".getBytes(StandardCharsets.UTF_8));
 
         assertNull(reviewer.perform(tempDir, tsFile));
     }
